# octonaut

./: README.md  octonaut.yaml
.github/workflows/: agent.yml  operator.yml
agent/: Dockerfile  pyproject.toml
agent/src/agent/: api.py  config.py  db.py  graph.py  kraken.py  main.py  memory.py  observability.py  runner.py  skills.py
agent/tests/: conftest.py  test_api.py  test_config.py  test_db.py  test_graph.py  test_kraken.py  test_main_importsafe.py  test_memory.py  test_observability.py  test_runner.py  test_skills.py
clusters/dev/: apps.yaml  patch.yaml
clusters/dev/agents/: aggressive.yaml  conservative.yaml  moderate.yaml
clusters/dev/apps/: coroot.yaml  kube-state-metrics.yaml  langfuse.yaml  octonaut-operator.yaml  routes.yaml
clusters/prod/: apps.yaml
clusters/prod/agents/: aggressive.yaml  conservative.yaml  moderate.yaml
clusters/prod/apps/: cert-manager.yaml  coroot.yaml  langfuse.yaml  octonaut-operator.yaml  (+3 more)
examples/: aggressive-grey.yaml  conservative-reptilian.yaml  moderate-pleiadian.yaml
operator/: Dockerfile  pyproject.toml
operator/deploy/: crd.yaml  kustomization.yaml  operator-deployment.yaml  rbac.yaml
operator/examples/: aggressive-grey.yaml
operator/samples/: minisaurus.yaml
operator/src/krakosaurus_operator/: handlers.py  postgres.py
operator/src/octonaut_operator/: handlers.py  postgres.py  resources.py
operator/tests/: test_handlers.py  test_postgres.py  test_resources.py
scripts/: build-agent.service  build-operator.service  generate-langfuse-secrets  k3s-image-build  k3s-image-watch  langfuse-secrets
