[project]
name = "octonaut-operator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "kopf>=1.37",
  "kubernetes>=30.1",
  "pyyaml>=6",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octonaut_operator"]
